--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <script src="script.js"></script>
 </head>
 <body>
-
+  <div id="loading" class="active">
+    <h1>Loading</h1>
+  </div>
 </body>
 </html>
