Added countdown section

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,21 @@
   <script src="script.js"></script>
 </head>
 <body>
+  <!-- Activate class enables section -->
   <div id="loading" class="active">
     <h1>Loading</h1>
+  </div>
+  <div id="countdown">
+    <!-- Activate class enables display -->
+    <div id="time-left-hours" class="time-left">
+      <span class="hours">15</span>:<span class="minutes">13</span>:<span class="seconds">05</span>
+    </div>
+    <div id="time-left-minutes" class="time-left">
+      <span class="minutes">13</span>:<span class="seconds">05</span>
+    </div>
+    <div id="time-left-seconds" class="time-left">
+      <span class="seconds">05</span>
+    </div>
   </div>
 </body>
 </html>
