Add new year message

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,8 @@
       <span class="seconds">05</span>
     </div>
   </div>
+  <div id="new-year">
+    <div class="year">2019</div>
+  </div>
 </body>
 </html>
