--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div id="new-year">
-    <div class="year">2019</div>
+    <div class="year">-</div>
   </div>
 </body>
 </html>
