Add menu and style button

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <script src="script.js"></script>
 </head>
 <body>
+  <div id="menu">
+    <button id="style" class="material-icons">style</button>
+  </div>
   <!-- Activate class enables section -->
   <div id="loading" class="active">
     <h1>Loading</h1>
