Add style button title

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="menu">
-    <button id="style" class="material-icons">style</button>
+    <button id="style" class="material-icons" title="Change style">style</button>
   </div>
   <!-- Activate class enables section -->
   <div id="loading" class="active">
