Add fullscreen button

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div id="menu">
+    <button id="fullscreen" class="material-icons" title="Enable fullscreen">fullscreen</button>
     <button id="style" class="material-icons" title="Change style">style</button>
   </div>
   <!-- Activate class enables section -->
